2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist .eplug.in file

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* org-gnome-copy-tool.eplug.in: fix folderview popup hook id.

2004-10-21  JP Rosevear  <jpr@novell.com>

	* org-gnome-copy-tool.eplug.in: s/image/icon/

2004-10-20  Not Zed  <NotZed@Ximian.com>

	* implemented a copy-utils plugin.
