@@ -4,8 +4,9 @@
     type="shlib"
     id="org.gnome.evolution.plugin.copyTool"
     location="@PLUGINDIR@/liborg-gnome-copy-tool.so"
-    name="A tool to extend various clipboard operations"
-    description="A test plugin which demonstrates a popup menu plugin which lets you copy things to the clipboard">
+    name="Copy tool">
+    <description>A test plugin which demonstrates a popup menu plugin which lets you copy things to the clipboard</description>
+    <author name="Michael Zucchi" email="notzed@ximian.com"/>
 
     <!-- hook into the uri popup menu -->
     <hook class="org.gnome.evolution.mail.popup:1.0">
