@@ -1,3 +1,8 @@
+2004-11-03  Not Zed  <NotZed@Ximian.com>
+
+	* org-gnome-copy-tool.eplug.in: gave it a better name and fixed
+	the description and author tags.
+
 2004-11-01  JP Rosevear  <jpr@novell.com>
 
 	* Makefile.am: dist .eplug.in file
